# AI-Tourism-Opinion-Analyzer

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CLONING_GUIDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  RESET_SETUP.md  check_radar.py  dataset.csv  environment.yml  forge.config.ts  index.html  optuna_trials.csv  package-lock.json  package.json  pyproject.toml  requirements.fastopic.txt  requirements.in  requirements.txt  resultados.db  setup-linux.sh  setup-macos.sh  setup-windows.bat  solucion-dependencias.txt  tailwind.config.js  temp.py  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts  vitest.config.ts
.github/workflows/: build.yml
data/: dataset_consolidado_opiniones.csv  dataset_opiniones_consolidado.csv
data/cancun/: cancun-acuario-interactivo.csv  cancun-playa-tortugas.csv  cancun-puerto-maya-cancun.csv
data/cdmx/: cdmx-jardines-flotantes-de-xochimilco.csv  cdmx-mercado-de-artesanias-la-ciudadela.csv  cdmx-paseo-de-la-reforma.csv  cdmx-zocalo-de-la-ciudad-de-mexico.csv
data/datasets_por_ciudad/: dataset_cancun.csv  dataset_cdmx.csv  dataset_datasets_por_ciudad.csv
data/processed/: analisis_opiniones_mixtas.csv  dataset_opiniones_analisis.csv  dataset_opiniones_analisis_backup_20250910_204810.csv  dataset_opiniones_consolidado.csv  estadisticas_clasificacion.json  reporte_clasificacion.txt  reviews_clasificadas_subjetividad.csv
dev/: null
docs/: index.html
notebooks/: 01-analisis_exploratorio_y_procesamiento_basico-de-datos.ipynb  02-analisis-de-sentimientos.ipynb  03-analisis-de-subjetividad.ipynb  03-etiquetado-opiniones-subjetividad.ipynb  03-etiquetado-opiones-subjetividad.ipynb  04-analisis-de-subjetividad.ipynb  04-evidenciar-opiniones-con-subjetividad-y-objetividad.ipynb  05-etiquetado-opiniones-subjetividad.ipynb  06-comparacion-de-subjetividad-y-agrupacion-por-sentimiento.ipynb  07-modelado-de-topicos-con-bertopic.ipynb  07-modelado-de-topicos.ipynb  08-modelado-de-topicos-con-fastopic.ipynb  09-etiquetado-topicos-predefinidos.ipynb  10-etiquetado-produccion-batch-api.ipynb  README_topicos.md  analisis_exploratorio_datos.ipynb  batch_errors_20250929_225207.jsonl  batch_results_20251001_091714.jsonl
notebooks/.ipynb_checkpoints/: 01-analisis_exploratorio_y_procesamiento_basico-de-datos-checkpoint.ipynb  04-evidenciar-opiniones-con-subjetividad-y-objetividad-checkpoint.ipynb
python/: README.md  api_bridge.py  main.py  requirements-dev.txt  requirements.txt  test_bridge.py
python/config/: __init__.py  config.py  logging_config.py
python/core/: __init__.py  fase_01_procesamiento_basico.py  fase_02_analisis_sentimientos.py  fase_02_estadisticas_basicas.py  fase_03_analisis_sentimientos.py  fase_03_analisis_subjetividad.py  fase_04_analisis_subjetividad.py  fase_04_clasificacion_categorias.py  fase_05_analisis_jerarquico_topicos.py  fase_05_clasificacion_categorias.py  fase_06_analisis_jerarquico_topicos.py  fase_06_resumen_inteligente.py  fase_07_resumen_inteligente.py  fase_07_visualizaciones.py  fase_08_insights_estrategicos.py  fase_08_visualizaciones.py  llm_provider.py  llm_utils.py  rollback_manager.py
python/data/: dataset.csv
python/docs/: DESKTOP_APP_ARCHITECTURE.md  DESKTOP_APP_IMPLEMENTATION_PLAN.md
python/scripts/: test_fase_08.py  test_llm_setup.py  test_llm_utils.py  test_model_download.py  test_validation.py
python/tests/: conftest.py  test_config.py  test_fase_01.py  test_rollback.py
scripts/: README.md  analisis_sentimientos.py  bundle-python.mjs  exploracion_datos.py  generate-icons.mjs  hf_login.py  migrar_estructura_datos.py  procesamiento_datos.py  procesamiento_datos_new.py  pyTa.py  setup-python.mjs  upload_models_to_hf.py  web_scrapping.py
scripts/etiquetado/: README.md  __init__.py  analizador.py  cargador_datos.py  clasificador.py  configuracion.py  demo_etiquetado.py  guardador.py  utils_etiquetado.py  visualizador.py
scripts/exploracion/: __init__.py  analizador_categorico.py  analizador_general.py  analizador_temporal.py  analizador_texto.py  detector_problemas.py  utils_exploracion.py  web_scrapping_avanzado.py
scripts/procesamiento/: __init__.py  cargador_datos.py  limpieza_datos.py  transformador_datos.py  utils_procesamiento.py  validador_datos.py
scripts/recoleccion/: ejecutar_recoleccion.py
scripts/sentimientos/: __init__.py  analizador_calificaciones.py  analizador_cardiff.py  analizador_huggingface.py  base_sentimientos.py  comparador_sentimientos.py  guia_migracion.py  utils_sentimientos.py  visualizaciones_sentimientos.py
scripts/subjetividad/: README.md  __init__.py  analizador_cruzado_sentimientos.py  analizador_huggingface_subjetividad.py  analizador_opiniones_mixtas.py  analizador_subjetividad.py  base_subjetividad.py  cargador_datos.py  comparador_metodos.py  utils_subjetividad.py  visualizaciones_mixtas.py  visualizaciones_subjetividad.py
scripts/topicos/: __init__.py  analizador_caracteristicas.py  clasificador_topicos_llm.py  configurador_fastopic.py  evaluador_metricas.py  filtrador_pos.py  limpieza_texto.py  limpieza_texto_mejorado.py  optimizacion_bertopic.py  traductor_textos.py  utils_topicos.py
src/: env.d.ts  index.css  main.ts  preload.ts  renderer.ts
src/__tests__/: PhaseCard.test.tsx  Sidebar.test.tsx  constants.test.ts  (+5 more)
(+241 files in other folders)
