[project]
name = "tourlyai-backend"
version = "1.0.0"
description = "Python NLP backend for TourlyAI desktop application"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["python"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "T20",    # flake8-print (warn on print statements)
    "RET",    # flake8-return
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # print() found — we use print for pipeline progress (migrate to logging later)
    "B905",   # zip() without strict= (not always needed)
    "RET504", # unnecessary assignment before return
    "SIM108", # ternary operator — readability preference
    "UP007",  # Use X | Y for union types — keep Optional for clarity
    "N802",   # function name should be lowercase — Spanish method names
    "N806",   # variable in function should be lowercase — Spanish vars
    "N803",   # argument name should be lowercase
    "N815",   # mixedCase variable in class scope
]

[tool.ruff.lint.per-file-ignores]
"python/scripts/*" = ["T201"]  # Allow print in scripts
"python/test_bridge.py" = ["T201"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "gpu: marks tests requiring GPU",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
