[project]
name = "tourlyai-backend"
version = "1.0.0"
description = "Python NLP backend for TourlyAI desktop application"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["python"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "T20",    # flake8-print (warn on print statements)
    "RET",    # flake8-return
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # print() found — we use print for pipeline progress (migrate to logging later)
    "B905",   # zip() without strict= (not always needed)
    "RET504", # unnecessary assignment before return
    "SIM108", # ternary operator — readability preference
    "SIM102", # nested if — readability preference
    "SIM103", # return condition directly — readability preference
    "SIM105", # contextlib.suppress — style preference
    "UP007",  # Use X | Y for union types — keep Optional for clarity
    "N802",   # function name should be lowercase — Spanish method names
    "N806",   # variable in function should be lowercase — Spanish vars
    "N803",   # argument name should be lowercase
    "N815",   # mixedCase variable in class scope
    "C408",   # unnecessary dict() call — style preference
    "RUF001", # ambiguous unicode in string — intentional Spanish/special chars
    "RUF002", # ambiguous unicode in docstring — intentional
    "RUF003", # ambiguous unicode in comment — intentional
    "RUF012", # mutable ClassVar — would require annotation refactor
    "RUF013", # implicit Optional — style preference (see UP007)
    "RUF022", # __all__ not sorted — style preference
    "PTH100", # os.path.abspath → Path.resolve — large refactor scope
    "PTH103", # os.makedirs → Path.mkdir — large refactor scope
    "PTH110", # os.path.exists → Path.exists — large refactor scope
    "PTH111", # os.path.expanduser → Path.expanduser — large refactor scope
    "PTH118", # os.path.join → Path / — large refactor scope
    "PTH120", # os.path.dirname → Path.parent — large refactor scope
    "PTH123", # open() → Path.open() — large refactor scope
]

[tool.ruff.lint.per-file-ignores]
"python/scripts/*" = ["T201"]  # Allow print in scripts
"python/test_bridge.py" = ["T201"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "gpu: marks tests requiring GPU",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
